Some progress on theory and design
I'll work on the theory a little bit.
I think we need to talk about the clustered rando (why/whether we choose this, and how it's done formally)

--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -108,3 +108,42 @@
   year={2004},
   publisher={HeinOnline}
 }
+
+@book{achen2017democracy,
+  title={Democracy for realists: Why elections do not produce responsive government},
+  author={Achen, Christopher H and Bartels, Larry M},
+  volume={4},
+  year={2017},
+  publisher={Princeton University Press}
+}
+
+@book{cronin1999direct,
+  title={Direct democracy: The politics of initiative, referendum, and recall},
+  author={Cronin, Thomas E},
+  year={1999},
+  publisher={iUniverse}
+}
+
+
+@article{bloom1999using,
+  title={Using cluster random assignment to measure program impacts: Statistical implications for the evaluation of education programs},
+  author={Bloom, Howard S and Bos, Johannes M and Lee, Suk-Won},
+  journal={Evaluation Review},
+  volume={23},
+  number={4},
+  pages={445--469},
+  year={1999},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+
+
+@article{raudenbush1997statistical,
+  title={Statistical analysis and optimal design for cluster randomized trials.},
+  author={Raudenbush, Stephen W},
+  journal={Psychological Methods},
+  volume={2},
+  number={2},
+  pages={173},
+  year={1997},
+  publisher={American Psychological Association}
+}
