Added an abstract

--- a/doc/evidence_policy.tex
+++ b/doc/evidence_policy.tex
@@ -149,7 +149,8 @@
 
 \begin{abstract}
 \noindent
-\vspace{10cm}
+Despite representing one of the most common forms of direct democracy around the world, studies of voter persuasion efforts in ballot initiatives remain scarce. These direct democratic efforts have been hypothesized to improve the quality and legitimacy of policy decisions by some, and to lead to poor policy outcomes due to special interest capture and lack of technical knowledge by others. In order to test these hypotheses empirically, we propose a field experiment examining voting outcomes on citizen initiated ballot propositions following randomized treatment of proposition endorsement or opposition by special interest groups and and policy experts during the 2020 California state elections. We seek to test whether citizens acting as policy makers give more credence to high quality policy research versus special interest information. In addition, we will replicate our field experiment with a survey experiment using identical subjects, treatments, and outcome measures.
+\vspace{6cm}
 \end{abstract}
 
 \pagebreak
